--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,11 +39,11 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Themes</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="themes?theme=dark">Dark theme</a>
-                            <a class="dropdown-item" href="themes?theme=wlight">Warm light theme</a>
-                            <a class="dropdown-item" href="themes?theme=clight">Cold light theme</a>
-                        </div>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="themes?theme=dark">Dark theme</a></li>
+                            <li><a class="dropdown-item" href="themes?theme=wlight">Warm light theme</a></li>
+                            <li><a class="dropdown-item" href="themes?theme=clight">Cold light theme</a></li>
+                        </ul>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
